# GAME_VAE

./: evaluate.py  pyproject.toml  train.py
data/IMG/: processing_video.py
data/MIDI/: preprocessing.py  preprocessing_chordonomicon.py  preprocessing_free_midi.py  preprocessing_nikodataset.py
data/MIDI/DEPRECATED/: preprocessing_chordonomicon.py  preprocessing_free_midi_pack.py  preprocessing_niko_dataset.py
models/: cnn_vae_model.py  lstm_vae_model.py
models/CNN_VAE_model/: parameters_vae.pkl
models/LSTM_VAE_model/: parameters_vae.pkl  training_history.pkl  weights_vae.weights.h5
